k8s/load_balancer_service.yml
apiVersion: v1
kind: Service
metadata:
  name: calert-deployment-service
  namespace: default
  labels:
    app: allow-users-traffic
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 6000
  selector:
    app: calert
    tier: api
  sessionAffinity: None
  type: LoadBalancer
