k8s/redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: redis-calert
spec:
  selector:
    service: redis
    tier: cache
  ports:
  - protocol: TCP
    port: 6379
